section and its style

--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
 <body>
     <div class=" container">
         <h1 class=" title">This is Git Testing 2.</h1>
+        <div class=" section">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut consequuntur obcaecati repellendus dolor aperiam quo architecto, perferendis facilis ea natus ut, laborum molestias vero, dicta error eos officia inventore. Veniam.
+            Repudiandae eveniet quisquam esse consectetur officia ad exercitationem cupiditate id veritatis officiis nisi vel non quibusdam ducimus, consequuntur praesentium nostrum, expedita accusamus delectus sint numquam voluptatem impedit. Explicabo, expedita? Placeat!
+            Fugit nisi consequatur natus necessitatibus doloremque mollitia recusandae. Sit at ipsum beatae voluptates perferendis molestias? Sed, aliquam alias eos doloribus maxime natus debitis perspiciatis assumenda ipsa, explicabo accusantium? Quam, maiores?
+            Aliquam nisi ullam quae ipsam adipisci repellendus, libero eaque iusto cupiditate! Dignissimos illo dolore nostrum enim voluptas tenetur, ipsam officia, similique quaerat reiciendis corrupti maiores cumque explicabo tempore laudantium modi!
+            Aut ex nisi quo inventore incidunt vero aspernatur voluptas assumenda repudiandae ipsa. Dolores nesciunt blanditiis soluta alias, qui ut nulla consectetur tempore facilis, labore nisi temporibus animi et sapiente error.
+            Architecto in culpa impedit quisquam delectus temporibus harum cumque omnis ea! Sequi itaque expedita rem quasi ducimus quia vero maxime placeat ipsa esse, velit voluptates, quis et sapiente maiores est.
+            Necessitatibus repudiandae a blanditiis inventore, numquam nesciunt libero adipisci laborum atque recusandae veritatis minima minus voluptatum cumque doloremque placeat voluptate, unde eveniet delectus. Similique molestiae magni provident iure. Quibusdam, suscipit?
+            Nam vitae doloremque inventore et repellat, quia error, ipsa qui iste architecto omnis consequatur, exercitationem nulla repudiandae accusamus tempore voluptatem quam debitis tempora magnam in harum modi expedita dolore! Ut?
+            Perspiciatis, exercitationem vero. Aut odit eos laborum quae, illo eligendi ipsa qui officiis molestiae blanditiis at vel ad. Unde fugit quisquam rerum cupiditate laudantium repellendus? Culpa quo possimus cumque repudiandae.
+            Quidem soluta excepturi et nostrum aperiam architecto, cumque aliquid quia? Natus eligendi perferendis delectus laudantium asperiores rem non numquam magnam maxime autem. Ipsum est, molestiae illum eius unde iste vitae.</p>
+        </div>
     </div>
 </body>
 </html>
