header and its font style from dev1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 <body>
     <div class=" container">
         <h1 class=" title">This is Git Testing 2.</h1>
+        <header>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error, molestias obcaecati. Autem a explicabo quisquam beatae maxime corporis molestiae, maiores labore deleniti pariatur cupiditate? Quia facere maiores ipsum enim libero!
+            Alias tenetur explicabo et velit ex, dolor exercitationem, deleniti neque animi in provident! Maiores quia voluptas est. Doloremque, nam minima ut accusantium, exercitationem eaque in beatae quod laudantium odit rerum?
+            Rem molestias necessitatibus commodi facere ullam a itaque eos, quae inventore, quam obcaecati neque voluptatum adipisci quisquam repellat iusto repellendus cum doloribus nobis voluptates soluta ratione? Odit iure mollitia provident.
+            Nobis ad repellendus perspiciatis esse, corporis adipisci quis, culpa repudiandae eveniet voluptatum ratione fugiat a reiciendis expedita voluptate sequi nesciunt? Architecto, iusto repellendus sed optio inventore expedita veniam exercitationem saepe.
+            Sequi sint odit dolorum explicabo blanditiis? Laudantium fugiat aspernatur vero saepe officiis perspiciatis totam? Perspiciatis soluta recusandae excepturi earum, modi officia nisi iste dicta adipisci veritatis, culpa vero deserunt! Pariatur.
+        </header>
         <div class=" section">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut consequuntur obcaecati repellendus dolor aperiam quo architecto, perferendis facilis ea natus ut, laborum molestias vero, dicta error eos officia inventore. Veniam.
             Repudiandae eveniet quisquam esse consectetur officia ad exercitationem cupiditate id veritatis officiis nisi vel non quibusdam ducimus, consequuntur praesentium nostrum, expedita accusamus delectus sint numquam voluptatem impedit. Explicabo, expedita? Placeat!
