--- a/homePg.html
+++ b/homePg.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class=" container"></div>
+    <div class=" container">
+        <h2 class=" title">This is Git-Push Testing</h2>
+    </div>
 </body>
 </html>
