Add New Section in index

--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
             Perspiciatis, exercitationem vero. Aut odit eos laborum quae, illo eligendi ipsa qui officiis molestiae blanditiis at vel ad. Unde fugit quisquam rerum cupiditate laudantium repellendus? Culpa quo possimus cumque repudiandae.
             Quidem soluta excepturi et nostrum aperiam architecto, cumque aliquid quia? Natus eligendi perferendis delectus laudantium asperiores rem non numquam magnam maxime autem. Ipsum est, molestiae illum eius unde iste vitae.</p>
         </div>
+        <div class=" section">
+            <p style=" text-align: center; font-weight: 700;">This is section section.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ad accusantium itaque labore! Fugiat, accusamus expedita nemo earum eius reiciendis nulla unde eligendi neque laboriosam veniam ipsum nam ratione ab?
+            Sunt incidunt optio laboriosam sapiente, natus ipsam tempore itaque rem qui recusandae in voluptate perferendis quae nihil accusamus aliquid asperiores maxime quas ipsum, repudiandae dicta deleniti eum cum similique. Quas!
+            Possimus doloremque est totam adipisci laboriosam cupiditate, id rem modi eaque saepe itaque facilis qui sint fugit eius ipsa ut reprehenderit at velit nostrum laborum ad eum nisi. Deserunt, laboriosam!
+            Unde, vero officiis! Molestiae debitis ipsum aliquid voluptas eaque itaque necessitatibus fuga non magni voluptatibus, illum quibusdam error rerum cupiditate praesentium culpa voluptates eum? Dolores cum ab quam perferendis dolore!
+            Error esse provident iusto doloribus dolorem nostrum, distinctio sunt iure amet maxime nisi? Minus fugiat corrupti explicabo sunt soluta, ducimus ea non ratione? Dolores facilis dolore aperiam asperiores error vitae.</p>
+        </div>
     </div>
 </body>
 <script src="./index.js"></script>
